// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GithubAvatarList maxItems 1`] = `
<DocumentFragment>
  <div
    aria-label="avatars of hasparus, lachlanjc, atanasster"
    class="css-i07oab-GithubAvatarList"
  >
    <div
      class="css-pncdcn-GithubAvatar"
      style="display: inline-block;"
    >
      <div
        class="css-1b0uybw-GithubAvatar"
      >
        <img
          class="css-1y16e88"
          height="32"
          src="https://github.com/hasparus"
          title="hasparus"
          width="32"
        />
      </div>
    </div>
    <div
      class="css-9cbusc-GithubAvatar"
      style="display: inline-block;"
    >
      <div
        class="css-1b0uybw-GithubAvatar"
      >
        <img
          class="css-1y16e88"
          height="32"
          src="https://github.com/lachlanjc"
          title="lachlanjc"
          width="32"
        />
      </div>
    </div>
    <div
      class="css-1tdzql8-GithubAvatarList"
    >
      ...
    </div>
  </div>
</DocumentFragment>
`;

exports[`GithubAvatarList overview 1`] = `
<DocumentFragment>
  <div
    aria-label="avatars of hasparus, lachlanjc, atanasster"
    class="css-i07oab-GithubAvatarList"
  >
    <div
      class="css-pncdcn-GithubAvatar"
      style="display: inline-block;"
    >
      <div
        class="css-1b0uybw-GithubAvatar"
      >
        <img
          class="css-1y16e88"
          height="32"
          src="https://github.com/hasparus"
          title="hasparus"
          width="32"
        />
      </div>
    </div>
    <div
      class="css-pncdcn-GithubAvatar"
      style="display: inline-block;"
    >
      <div
        class="css-1b0uybw-GithubAvatar"
      >
        <img
          class="css-1y16e88"
          height="32"
          src="https://github.com/lachlanjc"
          title="lachlanjc"
          width="32"
        />
      </div>
    </div>
    <div
      class="css-9cbusc-GithubAvatar"
      style="display: inline-block;"
    >
      <div
        class="css-1b0uybw-GithubAvatar"
      >
        <img
          class="css-1y16e88"
          height="32"
          src="https://github.com/atanasster"
          title="atanasster"
          width="32"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
